--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon start.js",
     "test": "jest --coverage --passWithNoTests"
   },
   "keywords": [],
@@ -17,6 +17,8 @@
     "nedb": "^1.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.13",
+    "supertest": "^6.1.6"
   }
 }
